[gd_scene load_steps=3 format=3 uid="uid://dehjx0puejrwr"]

[ext_resource type="Script" path="res://src/scripts/lobby/webRTC.gd" id="1_etbii"]
[ext_resource type="PackedScene" uid="uid://bodt7akw3tq1d" path="res://src/scenes/game/world.tscn" id="2_33qp6"]

[node name="WebRTC" type="Node3D"]
script = ExtResource("1_etbii")

[node name="World" parent="." instance=ExtResource("2_33qp6")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="WebRTCUI" type="VBoxContainer" parent="UI"]
offset_right = 72.0
offset_bottom = 194.0

[node name="NameInput" type="LineEdit" parent="UI/WebRTCUI"]
layout_mode = 2
placeholder_text = "Name"

[node name="CodeInput" type="LineEdit" parent="UI/WebRTCUI"]
layout_mode = 2
placeholder_text = "Code"

[node name="ConnectButton" type="Button" parent="UI/WebRTCUI"]
layout_mode = 2
text = "Connect"

[node name="LobbyTitle" type="Label" parent="UI/WebRTCUI"]
layout_mode = 2
text = "Tittle"

[node name="LobbyCode" type="Label" parent="UI/WebRTCUI"]
layout_mode = 2
text = "XXXXXX"

[node name="PlayerList" type="VBoxContainer" parent="UI/WebRTCUI"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="UI/WebRTCUI"]
layout_mode = 2
text = "Ready"

[node name="LeaveButton" type="Button" parent="UI/WebRTCUI"]
layout_mode = 2
text = "Leave"

[node name="ErrorLabel" type="Label" parent="UI/WebRTCUI"]
layout_mode = 2
